Refactor to allow for external in-place multi indexing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ project(berry)
 find_package (Eigen3 3.3.8 REQUIRED NO_MODULE)
 find_package(Threads REQUIRED)
 
+# TODO: Optionfy this
+set(CMAKE_BUILD_TYPE Debug)
+
 if(NOT DEFINED BRY_BUILD_EXECUTABLES)
     option(BRY_BUILD_EXECUTABLES "Build executables (set to OFF for building just the library target)" ON)
 endif()
