--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,12 @@ find_package (Eigen3 3.3.8 REQUIRED NO_MODULE)
 find_package(Threads REQUIRED)
 
 # TODO: Optionfy this
-set(CMAKE_BUILD_TYPE Debug)
-
-if(NOT DEFINED BRY_BUILD_EXECUTABLES)
-    option(BRY_BUILD_EXECUTABLES "Build executables (set to OFF for building just the library target)" ON)
+if(NOT DEFINED CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Debug)
 endif()
 
-if(NOT DEFINED BRY_BUILD_YAML)
-    option(BRY_BUILD_YAML "Build the yaml-cpp dependency" ON)
+if(NOT DEFINED BRY_BUILD_EXECUTABLES)
+    option(BRY_BUILD_EXECUTABLES "Build executables (ON by default, set to OFF for building just the library target)" ON)
 endif()
 
 set(CMAKE_CXX_STANDARD 20)
@@ -21,19 +19,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
-# Dependencies
-#if(BRY_BUILD_YAML)
-#    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dependencies/yaml-cpp)
-#endif()
-
 set(BRY_DEPENDENCY_INCLUDE_DIRS 
-    #${CMAKE_CURRENT_SOURCE_DIR}/dependencies/yaml-cpp/include
     ${EIGEN3_INCLUDE_DIRS}
 )
 set(BRY_LIBRARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/berry)
 
-#add_subdirectory(berry)
-
-#if(BRY_BUILD_EXECUTABLES)
-    add_subdirectory(src)
-#endif()
+if(BRY_BUILD_EXECUTABLES)
+   add_subdirectory(src)
+endif()
