Fix improper degree for multiplication and pow

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,11 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(BRY_DEPENDENCY_INCLUDE_DIRS 
     ${EIGEN3_INCLUDE_DIRS}
 )
-set(BRY_LIBRARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/berry)
+set(BRY_INCLUDE_DIRS 
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/berry
+    ${CMAKE_CURRENT_SOURCE_DIR}/berry/impl
+)
 
 if(BRY_BUILD_EXECUTABLES)
    add_subdirectory(src)
