--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,10 @@
 file(GLOB BRY_EXECUTABLES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp")
 
-message("Exec files: ${BRY_EXECUTABLES}")
 foreach(EXEC_FILE ${BRY_EXECUTABLES})
     get_filename_component(EXEC_NAME ${EXEC_FILE} NAME_WE)
     add_executable(${EXEC_NAME} ${EXEC_FILE})
-    message("bry lib dir: ${BRY_LIBRARY_DIR}")
     target_include_directories(${EXEC_NAME} PRIVATE
-        ${BRY_LIBRARY_DIR} 
-        ${BRY_LIBRARY_DIR}/impl
+        ${BRY_INCLUDE_DIRS} 
         ${BRY_DEPENDENCY_INCLUDE_DIRS}
     )
 endforeach()
