Add transform matrix application

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,8 @@ set(BRY_INCLUDE_DIRS
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/berry
     ${CMAKE_CURRENT_SOURCE_DIR}/berry/impl
+    ${BRY_DEPENDENCY_INCLUDE_DIRS}
+    CACHE INTERNAL ""
 )
 
 if(BRY_BUILD_EXECUTABLES)
