Switch to using lemon

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,9 +19,14 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
+set(LMN_BUILD_EXECUTABLES OFF)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/lemon)
+
 set(BRY_DEPENDENCY_INCLUDE_DIRS 
     ${EIGEN3_INCLUDE_DIRS}
+    ${LMN_INCLUDE_DIRS}
 )
+
 set(BRY_INCLUDE_DIRS 
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/berry
